@@ -2,7 +2,7 @@
 local _check_action_interact_original = PlayerCivilian._check_action_interact
 
 function PlayerCivilian:_check_action_interact(t, input, ...)
-	if self:_check_interact_toggle(t, input) then
+	if not (self:_check_interact_toggle(t, input) and JackHUD._data.push_to_interact) then
 		return _check_action_interact_original(self, t, input, ...)
 	end
 end
