@@ -87,7 +87,7 @@
 		},
 		{
 			"type" : "divider",
-			"size" : 16,
+			"size" : 16
 		},
 		{
 			"type": "toggle",
@@ -199,7 +199,7 @@
 		},
 		{
 			"type" : "divider",
-			"size" : 16,
+			"size" : 16
 		},
 		{
 			"type": "toggle",
