@@ -30,7 +30,7 @@
 		},
 		{
 			"type" : "divider",
-			"size" : 16,
+			"size" : 16
 		},
 		{
 			"type": "toggle",
@@ -43,7 +43,7 @@
 		},
 		{
 			"type" : "divider",
-			"size" : 16,
+			"size" : 16
 		},
 		{
 		    "type": "toggle",
@@ -56,10 +56,10 @@
 		},
 		{
 			"type" : "divider",
-			"size" : 16,
+			"size" : 16
 		},
 		{
-			"type": "toggle"
+			"type": "toggle",
 			"id": "show_suspicion_text",
 			"title": "show_suspicion_text",
 			"description": "show_suspicion_text_desc",
@@ -68,7 +68,7 @@
 			"default_value": true
 		},
 		{
-			"type": "toggle"
+			"type": "toggle",
 			"id": "show_reload_interaction",
 			"title": "show_reload_interaction",
 			"description": "show_reload_interaction_desc",
@@ -77,7 +77,7 @@
 			"default_value": true
 		},
 		{
-			"type": "toggle"
+			"type": "toggle",
 			"id": "show_interaction_circle",
 			"title": "show_interaction_circle",
 			"description": "show_interaction_circle_desc",
@@ -86,7 +86,7 @@
 			"default_value": true
 		},
 		{
-			"type": "toggle"
+			"type": "toggle",
 			"id": "show_interaction_text",
 			"title": "show_interaction_text",
 			"description": "show_interaction_text_desc",
@@ -95,12 +95,43 @@
 			"default_value": true
 		},
 		{
-			"type": "toggle"
+			"type": "toggle",
 			"id": "show_text_borders",
 			"title": "show_text_borders",
 			"description": "show_text_borders_desc",
 			"callback": "callback_show_text_borders",
 			"value": "show_text_borders",
+			"default_value": true
+		},
+		{
+			"type" : "divider",
+			"size" : 16
+		},
+		{
+			"type": "toggle",
+			"id": "truncate_name_tags",
+			"title": "truncate_name_tags",
+			"description": "truncate_name_tags_desc",
+			"callback": "callback_truncate_name_tags",
+			"value": "truncate_name_tags",
+			"default_value": true
+		},
+		{
+			"type": "toggle",
+			"id": "show_client_ranks",
+			"title": "show_client_ranks",
+			"description": "show_client_ranks_desc",
+			"callback": "callback_show_client_ranks",
+			"value": "show_client_ranks",
+			"default_value": true
+		},
+		{
+			"type": "toggle",
+			"id": "colorize_names",
+			"title": "colorize_names",
+			"description": "colorize_names_desc",
+			"callback": "callback_colorize_names",
+			"value": "colorize_names",
 			"default_value": true
 		}
 	]
