@@ -7,7 +7,7 @@
 	"priority": 200,
 	"updates" : [
 		{
-			"revision" : 7,
+			"revision" : 8,
 			"identifier" : "jackhud",
 		},
 		{
