@@ -1,7 +1,14 @@
 
 1.7r8:
 + added: seperate option for gage courier packages
++ added: detection risk of other players will be shown in stealth mode
++ added: Interaction info/time of other players
++ added: Name truncating according to killcounters, added rank
+~ changed: Kill counters now align to the players name
 ~ changed: default options
+~ fixed: push to interact in civilian mode (casino)
+
+NOTE: with this update you should disable the "bottom info box" of pocohud. (will be fixed in jackpack 1.8)
 
 1.7r7:
 - Added some screen skipping options.
